<resources>
    <string name="app_name">eMovie</string>
    <string name="upcoming_movies">Próximos estrenos</string>
    <string name="top_rated">Tendencia</string>
    <string name="recommended">Recomendados para ti</string>
    <string name="in_english">En inglés</string>
    <string name="date">Lanzados en 2020</string>
    <string name="watch_trailer">Ver trailer</string>
    <string name="movie_plot">Movie plot</string>
    <string name="movie_plot_example">In a near future, a lonely writer develops an unlikely relationship with an operating system designed to meet his every need.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">ok</string>
</resources>