<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.DetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_sample_poster"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient_detail_background"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_back_arrow" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_340sdp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/detail_title_size"
                tools:text="Moonlight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    style="@style/detailButtonsStyle"
                    android:background="@drawable/button_second_white_solid">

                    <TextView
                        android:id="@+id/date"
                        tools:text="2020"
                        style="@style/detailButtonsTextsStyle" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/detailButtonsStyle"
                    android:background="@drawable/button_second_white_solid">

                    <TextView
                        android:id="@+id/language"
                        tools:text="en"
                        style="@style/detailButtonsTextsStyle" />

                </RelativeLayout>

                <LinearLayout
                    android:background="@drawable/button_yellow_solid"
                    style="@style/detailButtonsStyle"
                    android:paddingHorizontal="0dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/star"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:src="@drawable/img_star" />

                    <TextView
                        android:id="@+id/rate"
                        tools:text="8.0"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_2sdp"
                        style="@style/detailButtonsTextsStyle" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:listitem="@layout/node_genre"
                tools:itemCount="1"/>

            <Button
                android:id="@+id/trailer"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:text="@string/watch_trailer"
                android:padding="@dimen/_8sdp"
                android:textAllCaps="false"
                android:textColor="@color/button_inactive_text_state"
                android:background="@drawable/button_inactive_state" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/movie_plot_text_size"
                android:text="@string/movie_plot" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/movie_plot_text_size"
                tools:text="@string/movie_plot_example" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>